# serotiny

./: .buildinfo  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  cli.html  contributing.html  dataframe_transforms.html  dynamic_imports.html  example_workflows.html  feature_extraction.html  genindex.html  getting_started.html  image_transforms.html  index.html  installation.html  model_zoo.html  modules.html  objects.inv  projects.html  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  serotiny.data.dataframe.html  serotiny.data.html  serotiny.data.image.html  serotiny.dataframe.html  serotiny.dataframe.readers.html  serotiny.dataframe.transforms.filter.html  serotiny.dataframe.transforms.group_cols.html  serotiny.dataframe.transforms.html  serotiny.dataframe.transforms.misc.html  serotiny.dataframe.transforms.split.html  (+98 more)
.github/workflows/: build-docs.yml  build-master.yml  publish-dev.yml  publish.yml  test-and-lint.yml
_modules/: index.html  serotiny.html
_sources/: cli.rst.txt  dataframe_transforms.rst.txt  dynamic_imports.rst.txt  feature_extraction.rst.txt  getting_started.rst.txt  image_transforms.rst.txt  index.rst.txt  model_zoo.rst.txt  projects.rst.txt  quickstart.rst.txt  serotiny.data.rst.txt  serotiny.dataframe.readers.rst.txt  serotiny.dataframe.rst.txt  serotiny.dataframe.transforms.filter.rst.txt  serotiny.dataframe.transforms.group_cols.rst.txt  serotiny.dataframe.transforms.rst.txt  serotiny.datamodules.manifest_datamodule.rst.txt  serotiny.datamodules.rst.txt  serotiny.datamodules.utils.rst.txt  serotiny.imports.rst.txt  serotiny.io.dataframe.dataframe_dataset.rst.txt  serotiny.io.dataframe.loaders.abstract_loader.rst.txt  serotiny.io.dataframe.loaders.classes.rst.txt  serotiny.io.dataframe.loaders.columns.rst.txt  serotiny.io.dataframe.loaders.image.rst.txt  serotiny.io.dataframe.loaders.random_tensor.rst.txt  serotiny.io.dataframe.loaders.rst.txt  serotiny.io.dataframe.rst.txt  serotiny.io.rst.txt  serotiny.losses.adversarial_loss.rst.txt  serotiny.losses.continuous_weibull.rst.txt  serotiny.losses.cosine_loss.rst.txt  serotiny.losses.gaussian_nllloss.rst.txt  serotiny.losses.rst.txt  serotiny.losses.weibull.rst.txt  serotiny.metrics.rst.txt  serotiny.ml_ops.mlflow_utils.rst.txt  serotiny.ml_ops.rst.txt  serotiny.models.basic_model.rst.txt  serotiny.models.inference.rst.txt  (+37 more)
_static/: documentation_options.js
bvae_mlp_workflow/: requirements.txt  runme.py
bvae_mlp_workflow/conf/: config.yaml
docs/: Makefile  cli.rst  conf.py  dataframe_transforms.rst  dynamic_imports.rst  example.csv  example_workflows.rst  feature_extraction.rst  getting_started.rst  image_transforms.rst  index.rst  installation.rst  make.bat  model_zoo.rst  modules.rst  projects.rst  quickstart.rst  serotiny.cli.config_cli.rst  serotiny.cli.dataframe_cli.rst  serotiny.cli.rst  serotiny.config.defaults.rst  serotiny.config.rst  serotiny.data.dataframe.rst  serotiny.data.image.rst  serotiny.dataframe.transforms.misc.rst  serotiny.dataframe.transforms.split.rst  serotiny.datamodules.dataframe.dataframe_datamodule.rst  serotiny.datamodules.dataframe.rst  serotiny.datamodules.dataframe.utils.rst  serotiny.datamodules.rst  serotiny.io.dataframe.loaders.random_image.rst  serotiny.io.dataframe.loaders.rst  serotiny.io.dataframe.readers.rst  serotiny.io.dataframe.rst  serotiny.io.image.rst  serotiny.io.rst  serotiny.loggers.mlflow.rst  serotiny.loggers.rst  serotiny.losses.continuous_bernoulli.rst  serotiny.losses.kl_divergence.rst  (+38 more)
doctrees/: contributing.doctree  environment.pickle  index.doctree  installation.doctree  modules.doctree  serotiny.datamodules.doctree  serotiny.doctree  serotiny.io.dataframe.doctree  serotiny.io.dataframe.loaders.doctree  serotiny.io.doctree  serotiny.losses.doctree  serotiny.metrics.doctree  serotiny.models.callbacks.doctree  serotiny.models.deprecated.doctree  serotiny.models.doctree  serotiny.models.vae.doctree  serotiny.networks.classification.doctree  serotiny.networks.deprecated.doctree  serotiny.networks.doctree  serotiny.networks.layers.doctree  serotiny.networks.vae.doctree  serotiny.transform.doctree  serotiny.utils.doctree
html/: contributing.html  modules.html  serotiny.html  serotiny.io.dataframe.html  serotiny.losses.html  serotiny.models.callbacks.html  serotiny.models.deprecated.html  serotiny.models.html  serotiny.models.vae.html  serotiny.networks.html  serotiny.networks.layers.html  serotiny.networks.vae.html  serotiny.transform.html
html/_modules/: index.html  serotiny.html
html/_sources/: serotiny.io.dataframe.loaders.rst.txt  serotiny.models.callbacks.rst.txt  serotiny.models.deprecated.rst.txt  serotiny.models.rst.txt  serotiny.models.vae.rst.txt  serotiny.transform.rst.txt
hydra_plugins/serotiny_search_path/: search_path.py
hydra_plugins/serotiny_shell_plugin/: serotiny_shell_plugin.py
serotiny/: __init__.py  cli.py  constants.py  csv.py  data.py  image.py  losses.py  progress_bar.py
serotiny/cli/: cli.py  config_cli.py  image_cli.py
serotiny/config/: apply.yaml  defaults.yaml  hydra.yaml  predict.yaml  test.yaml  train.yaml  utils.py
serotiny/data/: __init__.py  data.py  dataframe_dataset.py  loader_inference.py  loaders.py  normalize.py  predict.py
serotiny/dataframe/: __init__.py  readers.py  transforms.py
serotiny/datamodules/: __init__.py  aics_mnist.py  base_datamodule.py  constants.py  dummy.py  dummy_image.py  folder.py  (+17 more)
serotiny_steps/: apply_model.py  apply_projection.py  change_resolution.py  diagnostic_sheets.py  filter_data.py  fit_pca.py  make_aics_mnist_dataset.py  make_split_col.py  merge_config.py  merge_data.py  one_hot.py  partition_data.py  select_fields.py  split_data.py  train_classifier.py  train_mlp_vae.py  train_model.py  train_tmp.py  train_unet.py  train_vae.py  tune_classifier.py  tune_model.py
test/: __init__.py
tests/: test_classifier_step.py  test_dataframe_dataset.py  test_layers.py  test_mlp_vae_step.py  test_models.py  test_unet_step.py  test_vae_step.py
(+534 files in other folders)
