[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
name = "serotiny"
version = "0.0.9"
description = "A framework of tools to structure, configure and drive deep learning projects"
readme = "README.md"
classifiers = ["Natural Language :: English", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Natural Language :: English", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10"]
license = {text = "BSD-3"}

authors = [
    {name = "Guilherme Pires", email = "guilherme.pires@alleninstitute.org"},
    {name = "Ryan Spangler", email = "ryan.spangler@alleninstitute.org"},
    {name = "Ritvik Vasan", email = "ritvik.vasan@alleninstitute.org"},
    {name = "Theo Knijnenburg", email = "theo.knijnenburg@alleninstitute.org"},
    {name = "Nick Gomez", email = "nick.gomez@alleninstitute.org"},
    {name = "Caleb Chan", email = "caleb.chan@alleninstitute.org"},
]

requires-python = ">=3.8,<4.0"

dependencies = [
    "pip<23.0.0,>=22.1.2",
    "torch<2.0.0,>=1.11.0",
    "fire<1.0.0,>=0.4.0",
    "makefun<2.0.0,>=1.13.1",
    "hydra-core<2.0.0,>=1.3.1",
    "joblib<2.0.0,>=1.2.0",
    "mlflow<3.0.0,>=2.0.0",
    "nbformat<6.0.0,>=5.2.0",
    "omegaconf<3.0.0,>=2.2.2",
    "pyarrow<8.0.0,>=7.0.0",
    "pytorch-lightning<2.0,>=1.8",
    "PyYAML<7.0,>=6.0",
    "scikit-learn<2.0.0,>=1.0.2",
    "aicsimageio<5.0.0,>=4.6.4",
    "numpy<2.0,>=1.22",
    "pandas<2.0,>=1.1",
    "universal-pathlib<1.0.0,>=0.0.20",
    "s3fs<2023.0.0,>=2022.3.0",
    "fsspec<2023.0.0,>=2022.3.0",
    "pycryptodome<4.0.0,>=3.14.1",
    "frozendict<3.0.0,>=2.3.2",
    "ome-zarr<1.0.0,>=0.6.1",
    "protobuf<4.0.0",
    "jupyter-core<5.0.0,>=4.11.2",
    "grpcio<2.0.0,>=1.46.0",
    "anndata<1.0.0,>=0.8.0",
    "monai<2.0.0,>=1.1.0",
    "pip<23.0.0,>=22.1.2",
    "torch<2.0.0,>=1.11.0",
    "fire<1.0.0,>=0.4.0",
    "makefun<2.0.0,>=1.13.1",
    "hydra-core<2.0.0,>=1.3.1",
    "joblib<2.0.0,>=1.2.0",
    "mlflow<3.0.0,>=2.0.0",
    "nbformat<6.0.0,>=5.2.0",
    "omegaconf<3.0.0,>=2.2.2",
    "pyarrow<8.0.0,>=7.0.0",
    "pytorch-lightning<2.0,>=1.8",
    "PyYAML<7.0,>=6.0",
    "scikit-learn<2.0.0,>=1.0.2",
    "aicsimageio<5.0.0,>=4.6.4",
    "numpy<2.0,>=1.22",
    "pandas<2.0,>=1.1",
    "universal-pathlib<1.0.0,>=0.0.20",
    "s3fs<2023.0.0,>=2022.3.0",
    "fsspec<2023.0.0,>=2022.3.0",
    "pycryptodome<4.0.0,>=3.14.1",
    "frozendict<3.0.0,>=2.3.2",
    "ome-zarr<1.0.0,>=0.6.1",
    "protobuf<4.0.0",
    "jupyter-core<5.0.0,>=4.11.2",
    "grpcio<2.0.0,>=1.46.0",
    "anndata<1.0.0,>=0.8.0",
    "monai<2.0.0,>=1.1.0",
]

[project.urls]
homepage = "https://allencell.github.io/serotiny"
repository = "https://github.com/AllenCell/serotiny"
documentation = "https://allencell.github.io/serotiny"

[project.optional-dependencies]
docs = [
     "furo<2023.0.0,>=2022.9.29",
     "m2r2<1.0.0,>=0.3.3",
     "sphinx<6.0.0,>=5.3.0"
]
test = [
     "pre-commit<3.0.0,>=2.20.0",
     "pytest<8.0.0,>=7.2.0",
     "pytest-cov<5.0.0,>=4.0.0",
     "tox<4.0.0,>=3.27.0"
]
dev = [
    "pre-commit<3.0.0,>=2.20.0"
]
modin = [
    "modin"
]

[project.scripts]
serotiny = "serotiny.cli.cli:main"

[tool.pdm.build]
includes = ["serotiny", "LICENSE", "**/*.yaml", "**/*.json"]
excludes = ["**/*.pyc", "**/__pycache__"]

[tool.flake8]
exclude = "docs/"
ignore = [
	"E203",
	"E402",
	"W291",
	"W503"
]
max-line-length = 88
